--- a/index.html
+++ b/index.html
@@ -12,18 +12,23 @@
 </head>
 <body>
     
-    <div id="login-area">
+    <div >
         <h1 class="text-center">Welcome to Pioneer Bank</h1>
-        <div class="submit-area">
+        <div id="login-area" class="submit-area">
             <h4>Login </h4>
             <input type="text" class="form-control" placeholder="Email">
             <br>
             <input type="password" class="form-control" placeholder="Password" >
             <br>
-            <button class="btn btn-success"> Enter</button>
+            <button id="login" class="btn btn-success"> Enter</button>
         </div>
     </div>
-
+    <script>
+        document.getElementById("login").addEventListener('click',()=>{
+            loginArea=document.getElementById("login-area");
+            loginArea.style.display="none";
+        })
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
