--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
         document.getElementById("login").addEventListener('click',()=>{
             loginArea=document.getElementById("login-area");
             loginArea.style.display="none";
+            const transactionArea = document.getElementById("transaction-area");
+            transactionArea.style.display = "block";
         })
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
