--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
                 </div>
             </div>
         </div>
+        <div class="container">
+            <div class="row">
+              <div class="col text-center">
+                  <br>
+                <button class="btn btn-danger" id="back-to-login">Go back to Login Page</button>
+              </div>
+            </div>
+          </div>
     </div>
     <script>
         document.getElementById("login").addEventListener('click',()=>{
@@ -104,6 +112,12 @@
             const totalAmount = addedNumber + currentNumber;
             document.getElementById(id).innerText = totalAmount;
         }
+        document.getElementById("back-to-login").addEventListener('click',()=>{
+            document.getElementById("transaction-area").style.display="none";
+            document.getElementById("login-area").style.display="block";
+
+        }
+        )
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
